--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <span class="circle circle3"></span>
                             <span class="circle circle4"></span>
                             <span class="circle circle5">
-                                <img src="assets/img/flag.png">
+                                <img src="assets/img/flag.png" alt="Japanese national flag">
                             </span>
                         </div>
                         <div class="glass-frame"></div>
@@ -129,29 +129,29 @@
                         </div>
                         <div class="profile__card-bottom">
                             <div class="social-buttons-container">
-                                <button class="social-button .social-button1">
-                                    <a class="linkedin-button" href="https://www.linkedin.com/" target="_blank">
+                                <button class="social-button social-button1" title="linkedin button">
+                                    <a class="linkedin-button" href="https://www.linkedin.com/" target="_blank" title="my linkedin profile">
                                         <svg id="linkedin" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                                         </svg>
                                     </a>
                                 </button>
-                                <button class="social-button .social-button2">
-                                    <a class="github-button" href="https://github.com/" target="_blank">
+                                <button class="social-button social-button2" title="github button">
+                                    <a class="github-button" href="https://github.com/" target="_blank" title="my github profile">
                                         <svg id="github" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z"/>
                                         </svg>
                                     </a>    
                                 </button>
-                                <button class="social-button .social-button4">
-                                    <a class="discord-button" href="https://discordapp.com/users/1233363421207199827" target="_blank">
+                                <button class="social-button social-button3" title="discord button">
+                                    <a class="discord-button" href="https://discordapp.com/users/1233363421207199827" target="_blank" title="my github profile">
                                         <svg id="discord" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M19.3034 5.33716C17.9344 4.71103 16.4805 4.2547 14.9629 4C14.7719 4.32899 14.5596 4.77471 14.411 5.12492C12.7969 4.89144 11.1944 4.89144 9.60255 5.12492C9.45397 4.77471 9.2311 4.32899 9.05068 4C7.52251 4.2547 6.06861 4.71103 4.70915 5.33716C1.96053 9.39111 1.21766 13.3495 1.5891 17.2549C3.41443 18.5815 5.17612 19.388 6.90701 19.9187C7.33151 19.3456 7.71356 18.73 8.04255 18.0827C7.41641 17.8492 6.82211 17.5627 6.24904 17.2231C6.39762 17.117 6.5462 17.0003 6.68416 16.8835C10.1438 18.4648 13.8911 18.4648 17.3082 16.8835C17.4568 17.0003 17.5948 17.117 17.7434 17.2231C17.1703 17.5627 16.576 17.8492 15.9499 18.0827C16.2789 18.73 16.6609 19.3456 17.0854 19.9187C18.8152 19.388 20.5875 18.5815 22.4033 17.2549C22.8596 12.7341 21.6806 8.80747 19.3034 5.33716ZM8.5201 14.8459C7.48007 14.8459 6.63107 13.9014 6.63107 12.7447C6.63107 11.5879 7.45884 10.6434 8.5201 10.6434C9.57071 10.6434 10.4303 11.5879 10.4091 12.7447C10.4091 13.9014 9.57071 14.8459 8.5201 14.8459ZM15.4936 14.8459C14.4535 14.8459 13.6034 13.9014 13.6034 12.7447C13.6034 11.5879 14.4323 10.6434 15.4936 10.6434C16.5442 10.6434 17.4038 11.5879 17.3825 12.7447C17.3825 13.9014 16.5548 14.8459 15.4936 14.8459Z"></path>
                                         </svg>
                                     </a>
                                 </button>
-                                <button class="social-button .social-button5">
-                                    <a class="youtube-button" href="https://www.youtube.com/@rh.project_gallery" target="_blank">
+                                <button class="social-button social-button4" title="youtube button">
+                                    <a class="youtube-button" href="https://www.youtube.com/@rh.project_gallery" target="_blank" title="my github channel">
                                         <svg id="youtube" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M12.2439 4C12.778 4.00294 14.1143 4.01586 15.5341 4.07273L16.0375 4.09468C17.467 4.16236 18.8953 4.27798 19.6037 4.4755C20.5486 4.74095 21.2913 5.5155 21.5423 6.49732C21.942 8.05641 21.992 11.0994 21.9982 11.8358L21.9991 11.9884L21.9991 11.9991C21.9991 11.9991 21.9991 12.0028 21.9991 12.0099L21.9982 12.1625C21.992 12.8989 21.942 15.9419 21.5423 17.501C21.2878 18.4864 20.5451 19.261 19.6037 19.5228C18.8953 19.7203 17.467 19.8359 16.0375 19.9036L15.5341 19.9255C14.1143 19.9824 12.778 19.9953 12.2439 19.9983L12.0095 19.9991L11.9991 19.9991C11.9991 19.9991 11.9956 19.9991 11.9887 19.9991L11.7545 19.9983C10.6241 19.9921 5.89772 19.941 4.39451 19.5228C3.4496 19.2573 2.70692 18.4828 2.45587 17.501C2.0562 15.9419 2.00624 12.8989 2 12.1625V11.8358C2.00624 11.0994 2.0562 8.05641 2.45587 6.49732C2.7104 5.51186 3.45308 4.73732 4.39451 4.4755C5.89772 4.05723 10.6241 4.00622 11.7545 4H12.2439ZM9.99911 8.49914V15.4991L15.9991 11.9991L9.99911 8.49914Z"></path>
                                         </svg>
@@ -880,19 +880,19 @@
                     </h3>
                     <form class="contact__form" id="contact-form">
                         <div class="contact__form-div">
-                            <label class="contact__form-tag">Name</label>
+                            <label class="contact__form-tag" for="contact-name">Name</label>
                             <input name="sender_name" placeholder="Enter your name" class="contact__form-input" id="contact-name">
                         </div> 
                         <div class="contact__form-div">
-                            <label class="contact__form-tag">Email</label>
+                            <label class="contact__form-tag" for="contact-email">Email</label>
                             <input name="sender_email" placeholder="Enter your email address" class="contact__form-input" id="contact-email">
                         </div>
                         <div class="contact__form-div">
-                            <label class="contact__form-tag">Subject</label>
+                            <label class="contact__form-tag" for="contact-subject">Subject</label>
                             <input name="contact_subject" placeholder="Enter the subject" class="contact__form-input" id="contact-subject">
                         </div> 
                         <div class="contact__form-div contact__form-area">
-                            <label class="contact__form-tag">Content</label>
+                            <label class="contact__form-tag" for="contact-content">Content</label>
                             <textarea name="contact_content" placeholder="Enter your inquiry" class="contact__form-input" id="contact-content"></textarea>
                         </div>
                         <p class="contact__status" id="contact-status"></p>
@@ -912,32 +912,35 @@
         <div class="footer__container container"> 
             <h1 class="footer__title">Ryoichi Homma</h1>
             <div class="footer__subtitle grid">
-                <p>Full stack Developer</p>
-                <p>Database Developer</p>
-                <p>Android App Developer</p>
-                <p>Network Engineer</p>
+                <p>Full-Stack Developer</p>
                 <p>Software Engineer</p>
+                <p>Network Engineer</p>
+                <p>Database Engineer</p>
+                <p>Android App Developer</p>
             </div>
             <ul class="footer__list grid">
-                <a href="#home" class="footer__link">Home</a>
-                <a href="#projects" class="footer__link">Projects</a>
-                <a href="#skills" class="footer__link">Skills</a>
-                <a href="#services" class="footer__link">Services</a>
+                <li class="footer__list-item">
+                    <a href="#home" class="footer__link">Home</a>
+                    <a href="#projects" class="footer__link">Projects</a>
+                    <a href="#skills" class="footer__link">Skills</a>
+                    <a href="#services" class="footer__link">Services</a>
                 </li>
             </ul>
             <ul class="footer__social">
-                <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link"> 
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-                <a href="https://github.com/" target="_blank" class="footer__social-link"> 
-                    <i class="fa-brands fa-square-github"></i>
-                </a>
-                <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="footer__social-link"> 
-                    <i class="bi bi-discord"></i>
-                </a>
-                <a href="https://www.youtube.com/@rh.project_gallery" target="_blank" class="footer__social-link"> 
-                    <i class="fa-brands fa-youtube"></i>
-                </a>
+                <li class="footer__social-item">
+                    <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link" title="my linkedin profile"> 
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/" target="_blank" class="footer__social-link" title="my github profile"> 
+                        <i class="fa-brands fa-square-github"></i>
+                    </a>
+                    <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="footer__social-link" title="my discord profile"> 
+                        <i class="bi bi-discord"></i>
+                    </a>
+                    <a href="https://www.youtube.com/@rh.project_gallery" target="_blank" class="footer__social-link" title="my youtube channel"> 
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </li>
             </ul>
             <span class="footer__copyright">
                 <p>&#169; 2024 - Ryoichi Homma.</p>
@@ -947,7 +950,7 @@
     </footer>
 
     <!-- SCROLL UP -->
-    <a href="#home" class="scrollup" id="scroll-up">
+    <a href="#home" class="scrollup" id="scroll-up" title="scrollup icon">
         <i class="bi bi-hand-index-thumb"></i>
     </a>
     <!-- MAIN -->
