--- a/index.html
+++ b/index.html
@@ -160,10 +160,13 @@
                                 <button class="download-button" type="button">
                                     <span class="button__text">Download CV</span>
                                     <span class="button__icon">
-                                        <svg class="svg" id="download-button" viewBox="0 0 35 35" fill="currentColor">
+                                        <!-- <svg class="svg" id="download-button" viewBox="0 0 35 35" fill="currentColor">
                                             <path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path>
                                             <path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path>
                                             <path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path>
+                                        </svg> -->
+                                        <svg class="svg" id="download-button" viewBox="0 0 448 512">
+                                            <path d="M120.1 208.3c-3.9-2.9-7.8-4.4-11.7-4.4H91v104.5h17.5c3.9 0 7.8-1.5 11.7-4.4 3.9-2.9 5.8-7.3 5.8-13.1v-69.7c0-5.8-2-10.2-5.8-13.1zM404.1 32H43.9C19.7 32 .1 51.6 0 75.8v360.4C.1 460.4 19.7 480 43.9 480h360.2c24.2 0 43.8-19.6 43.9-43.8V75.8c-.1-24.2-19.7-43.8-43.9-43.8zM154.2 291.2c0 18.8-11.6 47.3-48.4 47.3h-46.4V173h47.4c35.4 0 47.4 28.5 47.4 47.3l0 70.9zm100.7-88.7H201.6v38.4h32.6v29.6H201.6v38.4h53.3v29.6h-62.2c-11.2 .3-20.4-8.5-20.7-19.7V193.7c-.3-11.2 8.6-20.4 19.7-20.7h63.2l0 29.5zm103.6 115.3c-13.2 30.8-36.9 24.6-47.4 0l-38.5-144.8h32.6l29.7 113.7 29.6-113.7h32.6l-38.5 144.8z"/>
                                         </svg>
                                     </span>
                                 </button>
@@ -238,7 +241,7 @@
                                 <img src="assets/img/proj1.jpg" alt="project image" class="projects__img">
                             </a>
                             <div>
-                                <span class="projects__subtitle">Image replication web app</span>
+                                <span class="projects__subtitle">AI image replication web tool</span>
                                 <h1 class="projects__title">AI Visual Doppelganger</h1>
                                 <div class="projects__button-contents" id="project1-buttons">
                                     <a href="https://youtu.be/VT6eddrVVOA/" target="_blank" class="projects__button">
@@ -262,8 +265,8 @@
                                 <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img">
                             </a>
                             <div>
-                                <span class="projects__subtitle">Food delivery app on Android</span>
-                                <h1 class="projects__title">PlateMate for Android OS</h1>
+                                <span class="projects__subtitle">Food delivery app on Android OS</span>
+                                <h1 class="projects__title">PlateMate</h1>
                                 <div class="projects__button-contents" id="project2-buttons">
                                     <a href="https://youtu.be/N_yUfrnbgWI/" target="_blank" class="projects__button">
                                         <span>Demo video</span>
@@ -282,7 +285,7 @@
                                 <img src="assets/img/proj3.png" alt="project image" class="projects__img">
                             </a>
                             <div>
-                                <span class="projects__subtitle">Network infrastructure design</span>
+                                <span class="projects__subtitle">Network infrastructure design for campus</span>
                                 <h1 class="projects__title">Campus Network Simulator</h1>
                                 <div class="projects__button-contents" id="project3-buttons">
                                     <a href="https://youtu.be/ayVUSVRPLqE/" target="_blank" class="projects__button">
@@ -306,7 +309,7 @@
                                 <img src="assets/img/proj4.png" alt="project image" class="projects__img">
                             </a>
                             <div>
-                                <span class="projects__subtitle">4+1 architectural view model</span>
+                                <span class="projects__subtitle">4+1 architectural view model of PlateMate</span>
                                 <h1 class="projects__title">PlateMate Architecture</h1>
                                 <div class="projects__button-contents" id="project4-buttons">
                                     <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank" class="projects__button">
