--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </span>
                         </div>
                         <div class="profile__card-bottom">
-                            <div class="social__buttons-container">
+                            <div class="social-buttons-container">
                                 <button class="social-button social-button1" title="linkedin button">
                                     <a class="linkedin-button" href="https://www.linkedin.com/in/ryoichihomma-jp-ca/" target="_blank" title="my linkedin profile">
                                         <svg id="linkedin" viewBox="0 0 32 32" fill="currentColor">
@@ -156,17 +156,23 @@
                                 </button>
                             </div>
 
-                            <div class="dev__button-container">
-                                <a href="https://dev.to/ryoichihomma/" target="_blank">
-                                    <button class="dev__button" type="button">
-                                        <span class="dev__button-text">See DEV Blog</span>
-                                        <span class="dev__button-icon">
-                                            <svg fill="currentColor" viewBox="0 0 24 24">
-                                                <path d="M7.826 10.083a.784.784 0 0 0-.468-.175h-.701v4.198h.701a.786.786 0 0 0 .469-.175c.155-.117.233-.292.233-.525v-2.798c.001-.233-.079-.408-.234-.525zM19.236 3H4.764C3.791 3 3.002 3.787 3 4.76v14.48c.002.973.791 1.76 1.764 1.76h14.473c.973 0 1.762-.787 1.764-1.76V4.76A1.765 1.765 0 0 0 19.236 3zM9.195 13.414c0 .755-.466 1.901-1.942 1.898H5.389V8.665h1.903c1.424 0 1.902 1.144 1.903 1.899v2.85zm4.045-3.562H11.1v1.544h1.309v1.188H11.1v1.543h2.142v1.188h-2.498a.813.813 0 0 1-.833-.792V9.497a.813.813 0 0 1 .792-.832h2.539l-.002 1.187zm4.165 4.632c-.531 1.235-1.481.99-1.906 0l-1.548-5.818h1.309l1.193 4.569 1.188-4.569h1.31l-1.546 5.818z"></path>
-                                            </svg>
-                                        </span>
-                                    </button>
-                                </a>
+                            <div class="download-button-container">
+                                <button class="download-button" type="button">
+                                    <span class="button__text">Download CV</span>
+                                    <span class="button__icon">
+                                        <!-- <svg class="svg" id="download-button" viewBox="0 0 35 35" fill="currentColor">
+                                            <path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path>
+                                            <path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path>
+                                            <path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path>
+                                        </svg> -->
+                                        <!-- <svg class="svg" id="download-button" fill="currentColor" viewBox="0 0 448 512">
+                                            <path d="M120.1 208.3c-3.9-2.9-7.8-4.4-11.7-4.4H91v104.5h17.5c3.9 0 7.8-1.5 11.7-4.4 3.9-2.9 5.8-7.3 5.8-13.1v-69.7c0-5.8-2-10.2-5.8-13.1zM404.1 32H43.9C19.7 32 .1 51.6 0 75.8v360.4C.1 460.4 19.7 480 43.9 480h360.2c24.2 0 43.8-19.6 43.9-43.8V75.8c-.1-24.2-19.7-43.8-43.9-43.8zM154.2 291.2c0 18.8-11.6 47.3-48.4 47.3h-46.4V173h47.4c35.4 0 47.4 28.5 47.4 47.3l0 70.9zm100.7-88.7H201.6v38.4h32.6v29.6H201.6v38.4h53.3v29.6h-62.2c-11.2 .3-20.4-8.5-20.7-19.7V193.7c-.3-11.2 8.6-20.4 19.7-20.7h63.2l0 29.5zm103.6 115.3c-13.2 30.8-36.9 24.6-47.4 0l-38.5-144.8h32.6l29.7 113.7 29.6-113.7h32.6l-38.5 144.8z"/>
+                                        </svg> -->
+                                        <svg viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);">
+                                            <path d="M7.826 10.083a.784.784 0 0 0-.468-.175h-.701v4.198h.701a.786.786 0 0 0 .469-.175c.155-.117.233-.292.233-.525v-2.798c.001-.233-.079-.408-.234-.525zM19.236 3H4.764C3.791 3 3.002 3.787 3 4.76v14.48c.002.973.791 1.76 1.764 1.76h14.473c.973 0 1.762-.787 1.764-1.76V4.76A1.765 1.765 0 0 0 19.236 3zM9.195 13.414c0 .755-.466 1.901-1.942 1.898H5.389V8.665h1.903c1.424 0 1.902 1.144 1.903 1.899v2.85zm4.045-3.562H11.1v1.544h1.309v1.188H11.1v1.543h2.142v1.188h-2.498a.813.813 0 0 1-.833-.792V9.497a.813.813 0 0 1 .792-.832h2.539l-.002 1.187zm4.165 4.632c-.531 1.235-1.481.99-1.906 0l-1.548-5.818h1.309l1.193 4.569 1.188-4.569h1.31l-1.546 5.818z"></path>
+                                        </svg>
+                                    </span>
+                                </button>
                             </div>
 
                         </div>
@@ -227,7 +233,7 @@
         <!--********************* PROJECTS SECTION *********************-->
         <section class="projects section" id="projects"> 
             <h2 class="section__title">Projects</h2>
-            <span class="section__subtitle">My projects gallery</span>
+            <span class="section__subtitle">Most latest works</span>
 
             <div class="container section__border">
                 <div class="projects__container swiper">
@@ -306,7 +312,7 @@
                                 <img src="assets/img/proj4.png" alt="project image" class="projects__img">
                             </a>
                             <div>
-                                <span class="projects__subtitle">The 4+1 architectural view model</span>
+                                <span class="projects__subtitle">4+1 architectural view model of PlateMate</span>
                                 <h1 class="projects__title">PlateMate Architecture</h1>
                                 <div class="projects__button-contents" id="project4-buttons">
                                     <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank" class="projects__button">
@@ -333,7 +339,7 @@
         <!--*********************** SKILLS SECTION ***********************-->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <span class="section__subtitle">My technical skills and uses</span>
+            <span class="section__subtitle">Technical skills and uses</span>
             <div class="skills__container container grid section__border"> 
                 <!-- 1st category (frontend dev & web design) -->
                 <div class="skills__content">
@@ -696,7 +702,7 @@
         <!--******************* CREDENTIALS SECTION ******************-->
         <section class="credentials section" id="credentials"> 
             <h2 class="section__title">Credentials</h2>
-            <span class="section__subtitle">My academic and professional backgrounds</span>
+            <span class="section__subtitle">Academic and professional backgrounds</span>
 
             <div class="credentials__container container grid section__border">
                 <div class="credentials__tabs">
@@ -710,10 +716,11 @@
 
                 <div class="credentials__contents">
                     <div class="credentials__content credentials__active" info-content id="education">
+
                         <div class="credentials__info">
                             <!-- Credential data (left side:nth-child(1)) -->
                             <div class="credentials__data">
-                                <h3 class="credentials__name">Computing Science Diploma</h3>
+                                <h3 class="credentials__name">Computer Science Diploma</h3>
                                 <span class="credentials__location">Thompson Rivers University, Canada</span>
                                 <div class="credentials__duration">
                                     <i class="bi bi-calendar-week"></i>Jan. 2021 - Apr. 2024
@@ -729,38 +736,20 @@
                             <div></div>
                             <div>
                                 <span class="credentials__sphere-point"></span>
-                                <span class="credentials__line"></span>
+                                <!-- <span class="credentials__line"></span> -->
                             </div>
                             <!-- Credential data (right side:nth-child(3)) -->
                             <div class="credentials__data">
-                                <h3 class="credentials__name">
-                                    Responsive Web Design Certification
-                                </h3>
-                                <span class="credentials__location">freecodecamp, online</span>
+                                <h3 class="credentials__name">Global Consumer Intelligence</h3>
+                                <span class="credentials__location">
+                                    The University of Tokyo, Japan
+                                </span>
                                 <div class="credentials__duration">
-                                    <i class="bi bi-calendar-week"></i>May 2024 - May 2024
+                                    <i class="bi bi-calendar-week"></i>Apr. 2023 - Jul. 2023
                                 </div>
                             </div>
                         </div>
 
-                        <div class="credentials__info">
-                            <!-- Credential data (left side:nth-child(1)) -->
-                            <div class="credentials__data">
-                                <h3 class="credentials__name">
-                                    JavaScript Algorithms and Data Structures (Beta) Certification |
-                                    <br>
-                                    Front End Development Libraries Certification
-                                </h3>
-                                <span class="credentials__location">freecodecamp, online</span>
-                                <div class="credentials__duration">
-                                    <i class="bi bi-calendar-week"></i>Jun. 2024 - Present
-                                </div>
-                            </div>
-                            <div>
-                                <span class="credentials__sphere-point"></span>
-                                <!-- <span class="credentials__line"></span> -->
-                            </div>
-                        </div>
                     </div>
 
                     <div class="credentials__content" info-content id="career">
@@ -769,9 +758,9 @@
                             <!-- Credential data (left side:nth-child(1)) -->
                             <div class="credentials__data">
                                 <h3 class="credentials__name">
-                                    Shift Leader | Chef | Server
+                                    Shift Leader & Chef & Server
                                 </h3>
-                                <span class="credentials__location">Akindo Sushiro, Japan</span>
+                                <span class="credentials__location">Sushiro, Japan</span>
                                 <div class="credentials__duration">
                                     <i class="bi bi-calendar-week"></i>Apr. 2014 - May. 2017
                                 </div>
@@ -805,12 +794,11 @@
                             <!-- Credential data (left side:nth-child(1)) -->
                             <div class="credentials__data">
                                 <h3 class="credentials__name">
-                                    Personal | Fitness Trainer
+                                    Personal & Fitness Trainer
                                 </h3>
-                                <span class="credentials__location">Central Sports, Japan</span>
+                                <span class="credentials__location">Central Wellness Sports Club, Japan</span>
                                 <div class="credentials__duration">
-                                    <i class="bi bi-calendar-week"></i>Apr. - Aug. 2022<br>
-                                    <i class="bi bi-calendar-week"></i>May - Aug. 2023
+                                    <i class="bi bi-calendar-week"></i>Apr. - Aug. 2022 & 2023
                                 </div>
                             </div>
                             <div>
@@ -876,16 +864,14 @@
                     </div>
 
                     <div class="download__button-container">
-                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1j9PtxopJDvZWrEj078qvjclFLojdWfxJ&export=download">
-                            <button class="download__button" type="button">
-                                <span class="download__button-text">Download CV</span>
-                                <span class="download__button-icon">
-                                    <!-- <i class="fa-solid fa-download bx-fade-down"></i> -->
-                                    <!-- <i class="ri-download-2-fill bx-fade-down"></i> -->
-                                    <i class='bx bxs-download bx-fade-down'></i>
-                                </span>
-                            </button>
-                        </a>
+                        <button class="download__button" type="button">
+                            <span class="download__button-text">Download CV</span>
+                            <span class="download__button-icon">
+                                <!-- <i class="fa-solid fa-download bx-fade-down"></i> -->
+                                <!-- <i class="ri-download-2-fill bx-fade-down"></i> -->
+                                <i class='bx bxs-download bx-fade-down'></i>
+                            </span>
+                        </button>
                     </div>
                 </div>
 
@@ -936,11 +922,10 @@
             </div>
             <ul class="footer__list grid">
                 <li class="footer__list-item">
-                    <!-- <a href="#home" class="footer__link">Home</a> -->
+                    <a href="#home" class="footer__link">Home</a>
                     <a href="#projects" class="footer__link">Projects</a>
                     <a href="#skills" class="footer__link">Skills</a>
                     <a href="#services" class="footer__link">Services</a>
-                    <a href="#credentials" class="footer__link">Credentials</a>
                 </li>
             </ul>
             <ul class="footer__social">
